Fixed navbar links visibility

--- a/Checkflix/Checkflix/ClientApp/src/app/nav-menu/nav-menu.component.css
+++ b/Checkflix/Checkflix/ClientApp/src/app/nav-menu/nav-menu.component.css
@@ -28,3 +28,7 @@ html {
   color:#542582;
   cursor: pointer;
 }
+
+.link-active {
+  background-color: red;
+}
